_generated-doc/3.15/config/quarkus-quartz.adoc
:summaryTableId: quarkus-quartz_quarkus-quartz
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-clustered]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-clustered[`quarkus.quartz.clustered`]##

[.description]
--
Enable cluster mode or not.

If enabled make sure to set the appropriate cluster properties.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CLUSTERED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CLUSTERED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-cluster-checkin-interval]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-cluster-checkin-interval[`quarkus.quartz.cluster-checkin-interval`]##

[.description]
--
The frequency (in milliseconds) at which the scheduler instance checks-in with other instances of the cluster.

Ignored if using a `ram` store i.e `StoreType++#++RAM`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CLUSTER_CHECKIN_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CLUSTER_CHECKIN_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|long
|`15000`

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-store-type]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-store-type[`quarkus.quartz.store-type`]##

[.description]
--
The type of store to use.

When using `StoreType++#++JDBC_CMT` or `StoreType++#++JDBC_TX` configuration values make sure that you have the datasource configured. See link:https://quarkus.io/guides/datasource[Configuring your datasource] for more information.

To create Quartz tables, you can perform a schema migration via the link:https://quarkus.io/guides/flyway[Flyway extension] using a SQL script matching your database picked from link:https://github.com/quartz-scheduler/quartz/blob/master/quartz-core/src/main/resources/org/quartz/impl/jdbcjobstore[Quartz repository].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`ram`, `jdbc-tx`, `jdbc-cmt`
|`ram`

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-datasource]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-datasource[`quarkus.quartz.datasource`]##

[.description]
--
The name of the datasource to use.

Ignored if using a `ram` store i.e `StoreType++#++RAM`.

Optionally needed when using the `jdbc-tx` or `jdbc-cmt` store types. If not specified, defaults to using the default datasource.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-table-prefix]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-table-prefix[`quarkus.quartz.table-prefix`]##

[.description]
--
The prefix for quartz job store tables.

Ignored if using a `ram` store i.e `StoreType++#++RAM`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TABLE_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TABLE_PREFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|`QRTZ_`

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-select-with-lock-sql]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-select-with-lock-sql[`quarkus.quartz.select-with-lock-sql`]##

[.description]
--
The SQL string that selects a row in the "LOCKS" table and places a lock on the row.

Ignored if using a `ram` store i.e `StoreType++#++RAM`.

If not set, the default value of Quartz applies, for which the "++{++0++}++" is replaced during run-time with the `table-prefix`, the "++{++1++}++" with the `instance-name`.

An example SQL string `SELECT ++*++ FROM ++{++0++}++LOCKS WHERE SCHED_NAME = ++{++1++}++ AND LOCK_NAME = ? FOR UPDATE`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SELECT_WITH_LOCK_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SELECT_WITH_LOCK_SQL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-serialize-job-data]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-serialize-job-data[`quarkus.quartz.serialize-job-data`]##

[.description]
--
Instructs JDBCJobStore to serialize JobDataMaps in the BLOB column.

Ignored if using a `ram` store i.e `StoreType++#++RAM`.

If this is set to `true`, the JDBCJobStore will store the JobDataMaps in their serialize form in the BLOB Column. This is useful when you want to store complex JobData objects other than String. This is equivalent of setting `org.quartz.jobStore.useProperties` to `false`. *NOTE: When this option is set to `true`, all the non-String classes used in JobDataMaps have to be registered for serialization when building a native image*

If this is set to `false` (the default), the values can be stored as name-value pairs rather than storing more complex objects in their serialized form in the BLOB column. This can be handy, as you avoid the class versioning issues that can arise from serializing your non-String classes into a BLOB. This is equivalent of setting `org.quartz.jobStore.useProperties` to `true`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SERIALIZE_JOB_DATA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SERIALIZE_JOB_DATA+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-quartz_quarkus-quartz-instance-name]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-instance-name[`quarkus.quartz.instance-name`]##

[.description]
--
The name of the Quartz instance.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|`QuarkusQuartzScheduler`

a| [[quarkus-quartz_quarkus-quartz-instance-id]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-instance-id[`quarkus.quartz.instance-id`]##

[.description]
--
The identifier of Quartz instance that must be unique for all schedulers working as if they are the same _logical_ Scheduler within a cluster. Use the default value `AUTO` or some of the configured link:https://quarkus.io/guides/quartz#quarkus-quartz_quarkus.quartz.instance-id-generators-instance-id-generators[instance ID generators] if you wish the identifier to be generated for you.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|`AUTO`

a| [[quarkus-quartz_quarkus-quartz-batch-trigger-acquisition-fire-ahead-time-window]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-batch-trigger-acquisition-fire-ahead-time-window[`quarkus.quartz.batch-trigger-acquisition-fire-ahead-time-window`]##

[.description]
--
The amount of time in milliseconds that a trigger is allowed to be acquired and fired ahead of its scheduled fire time.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_FIRE_AHEAD_TIME_WINDOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_FIRE_AHEAD_TIME_WINDOW+++`
endif::add-copy-button-to-env-var[]
--
|long
|`0`

a| [[quarkus-quartz_quarkus-quartz-batch-trigger-acquisition-max-count]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-batch-trigger-acquisition-max-count[`quarkus.quartz.batch-trigger-acquisition-max-count`]##

[.description]
--
The maximum number of triggers that a scheduler node is allowed to acquire (for firing) at once.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_MAX_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_BATCH_TRIGGER_ACQUISITION_MAX_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`1`

a| [[quarkus-quartz_quarkus-quartz-thread-count]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-thread-count[`quarkus.quartz.thread-count`]##

[.description]
--
The size of scheduler thread pool. This will initialize the number of worker threads in the pool.

It's important to bear in mind that Quartz threads are not used to execute scheduled methods, instead the regular Quarkus thread pool is used by default. See also `quarkus.quartz.run-blocking-scheduled-method-on-quartz-thread`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_THREAD_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_THREAD_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`10`

a| [[quarkus-quartz_quarkus-quartz-thread-priority]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-thread-priority[`quarkus.quartz.thread-priority`]##

[.description]
--
Thread priority of worker threads in the pool.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_THREAD_PRIORITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_THREAD_PRIORITY+++`
endif::add-copy-button-to-env-var[]
--
|int
|`5`

a| [[quarkus-quartz_quarkus-quartz-misfire-threshold]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-misfire-threshold[`quarkus.quartz.misfire-threshold`]##

[.description]
--
Defines how late the schedulers should be to be considered misfired.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_MISFIRE_THRESHOLD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_MISFIRE_THRESHOLD+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`60S`

a| [[quarkus-quartz_quarkus-quartz-shutdown-wait-time]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-shutdown-wait-time[`quarkus.quartz.shutdown-wait-time`]##

[.description]
--
The maximum amount of time Quarkus will wait for currently running jobs to finish. If the value is `0`, then Quarkus will not wait at all for these jobs to finish - it will call `org.quartz.Scheduler.shutdown(false)` in this case.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SHUTDOWN_WAIT_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SHUTDOWN_WAIT_TIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`

a| [[quarkus-quartz_quarkus-quartz-simple-trigger-misfire-policy]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-simple-trigger-misfire-policy[`quarkus.quartz.simple-trigger.misfire-policy`]##

[.description]
--
The quartz misfire policy for this job.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SIMPLE_TRIGGER_MISFIRE_POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SIMPLE_TRIGGER_MISFIRE_POLICY+++`
endif::add-copy-button-to-env-var[]
--
a|`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing`
|`smart-policy`

a| [[quarkus-quartz_quarkus-quartz-cron-trigger-misfire-policy]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-cron-trigger-misfire-policy[`quarkus.quartz.cron-trigger.misfire-policy`]##

[.description]
--
The quartz misfire policy for this job.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CRON_TRIGGER_MISFIRE_POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CRON_TRIGGER_MISFIRE_POLICY+++`
endif::add-copy-button-to-env-var[]
--
a|`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing`
|`smart-policy`

a| [[quarkus-quartz_quarkus-quartz-run-blocking-scheduled-method-on-quartz-thread]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-run-blocking-scheduled-method-on-quartz-thread[`quarkus.quartz.run-blocking-scheduled-method-on-quartz-thread`]##

[.description]
--
When set to `true`, blocking scheduled methods are invoked on a thread managed by Quartz instead of a thread from the regular Quarkus thread pool (default).

When this option is enabled, blocking scheduled methods do not run on a `duplicated context`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_RUN_BLOCKING_SCHEDULED_METHOD_ON_QUARTZ_THREAD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_RUN_BLOCKING_SCHEDULED_METHOD_ON_QUARTZ_THREAD+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

h|[[quarkus-quartz_section_quarkus-quartz-misfire-policy]] [.section-name.section-level0]##link:#quarkus-quartz_section_quarkus-quartz-misfire-policy[Misfire policy per job configuration]##
h|Type
h|Default

a| [[quarkus-quartz_quarkus-quartz-misfire-policy-identity]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-misfire-policy-identity[`quarkus.quartz.misfire-policy."identity"`]##

[.description]
--
The quartz misfire policy for this job.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_MISFIRE_POLICY__IDENTITY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_MISFIRE_POLICY__IDENTITY_+++`
endif::add-copy-button-to-env-var[]
--
a|`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing`
|`smart-policy`


h|[[quarkus-quartz_section_quarkus-quartz-instance-id-generators]] [.section-name.section-level0]##link:#quarkus-quartz_section_quarkus-quartz-instance-id-generators[Instance ID generators]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-instance-id-generators-generator-name-class]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-instance-id-generators-generator-name-class[`quarkus.quartz.instance-id-generators."generator-name".class`]##

[.description]
--
Class name for the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-instance-id-generators-generator-name-properties-property-key]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-instance-id-generators-generator-name-properties-property-key[`quarkus.quartz.instance-id-generators."generator-name".properties."property-key"`]##

[.description]
--
The properties passed to the class.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|


h|[[quarkus-quartz_section_quarkus-quartz-trigger-listeners]] [.section-name.section-level0]##link:#quarkus-quartz_section_quarkus-quartz-trigger-listeners[Trigger listeners]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-trigger-listeners-listener-name-class]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-trigger-listeners-listener-name-class[`quarkus.quartz.trigger-listeners."listener-name".class`]##

[.description]
--
Class name for the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-trigger-listeners-listener-name-properties-property-key]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-trigger-listeners-listener-name-properties-property-key[`quarkus.quartz.trigger-listeners."listener-name".properties."property-key"`]##

[.description]
--
The properties passed to the class.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|


h|[[quarkus-quartz_section_quarkus-quartz-job-listeners]] [.section-name.section-level0]##link:#quarkus-quartz_section_quarkus-quartz-job-listeners[Job listeners]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-job-listeners-listener-name-class]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-job-listeners-listener-name-class[`quarkus.quartz.job-listeners."listener-name".class`]##

[.description]
--
Class name for the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-job-listeners-listener-name-properties-property-key]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-job-listeners-listener-name-properties-property-key[`quarkus.quartz.job-listeners."listener-name".properties."property-key"`]##

[.description]
--
The properties passed to the class.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|


h|[[quarkus-quartz_section_quarkus-quartz-plugins]] [.section-name.section-level0]##link:#quarkus-quartz_section_quarkus-quartz-plugins[Plugins]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-plugins-plugin-name-class]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-plugins-plugin-name-class[`quarkus.quartz.plugins."plugin-name".class`]##

[.description]
--
Class name for the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus-quartz-plugins-plugin-name-properties-property-key]] [.property-path]##link:#quarkus-quartz_quarkus-quartz-plugins-plugin-name-properties-property-key[`quarkus.quartz.plugins."plugin-name".properties."property-key"`]##

[.description]
--
The properties passed to the class.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-quartz_quarkus-quartz]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]

:!summaryTableId: